fixed alignment issue on the card footer on the heat page

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,19 @@ footer {
 }
 
 .heatCard {
-  width: '25rem';
+  width: auto;
   height: 100%;
-  
+  display: flex;
+  flex-direction: column;
+}
+
+.heat-text {
+  padding-bottom: 50px;
+}
+
+.heatCardFooter {
+  position: absolute;
+  bottom: 0;
+  left:0;
+  width: 100%;
 }
